src/k8s/bservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bservice-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: bservice
  template:
    metadata:
      labels:
        component: bservice
    spec:
      containers:
      - name: bservice
        image: munaufaldi/project-bservice
        ports: 
          - containerPort: 5000
