src/k8s/cservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cservice-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: cservice
  template:
    metadata:
      labels:
        component: cservice
    spec:
      containers:
      - name: cservice
        image: munaufaldi/project-cservice
        ports: 
          - containerPort: 5000
