src/k8s/fservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fservice-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: fservice
  template:
    metadata:
      labels:
        component: fservice
    spec:
      containers:
      - name: fservice
        image: munaufaldi/project-fservice
        ports: 
          - containerPort: 5000
