src/k8s/bservice-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bservice-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: bservice
  ports:
    - port: 5000
      targetPort: 5000
