src/k8s/cservice-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cservice-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: cservice
  ports:
    - port: 5000
      targetPort: 5000
