src/k8s/fservice-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fservice-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: fservice
  ports:
    - port: 5000
      targetPort: 5000
